# hedwig-code-graph

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.claude/: settings.json
.claude/skills/hedwig-cg/: SKILL.md
.github/workflows/: ci.yml  release.yml
docs/: README_de.md  README_ja.md  README_ko.md  README_zh.md  claude-code-skill.md
hedwig_cg/: __init__.py  mcp_server.py  skill.md
hedwig_cg/.hedwig-kb/: knowledge.db
hedwig_cg/cli/: _helpers.py  integrations.py  main.py
hedwig_cg/core/: __init__.py  build.py  cluster.py  detect.py  extract.py  git_cochange.py  pipeline.py  tags_extract.py  ts_extract.py
hedwig_cg/query/: embeddings.py  hybrid.py
hedwig_cg/scripts/: auto_rebuild.sh
hedwig_cg/storage/: store.py
hedwig_kg/: __init__.py  __main__.py  mcp_server.py  skill.md
hedwig_kg/cli/: main.py  viz_template.html
hedwig_kg/core/: analyze.py  build.py  cluster.py  detect.py  extract.py  pipeline.py  tags_extract.py  ts_extract.py
hedwig_kg/queries/: objc-tags.scm
hedwig_kg/query/: embeddings.py  hybrid.py
hedwig_kg/scripts/: auto_rebuild.sh
hedwig_kg/storage/: store.py
tests/: test_build.py  test_cli.py  test_community.py  test_detect.py  test_e2e_pipeline.py  test_extract.py  test_git_cochange.py  test_hybrid.py  test_incremental.py  test_lang_detect.py  test_markdown_extract.py  test_mcp_server.py  test_pipeline.py  test_store.py  test_ts_extract_js.py  test_ts_extract_typescript.py  test_visualization.py
