[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hedwig-kg"
version = "0.3.0"
description = "Local-first knowledge graph builder with hybrid vector + graph search"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "labyu" }]
keywords = ["knowledge-graph", "vector-search", "graphrag", "code-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries",
    "Topic :: Text Processing :: Indexing",
    "Typing :: Typed",
]

readme = "README.md"

dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "networkx>=3.2",
    "tree-sitter>=0.24",
    "tree-sitter-python>=0.23",
    "tree-sitter-javascript>=0.23",
    "tree-sitter-typescript>=0.23",
    "sentence-transformers>=3.0",
    "faiss-cpu>=1.7.4",
    "leidenalg>=0.10",
    "igraph>=0.11",
    "numpy>=1.26",
]

[project.urls]
Homepage = "https://github.com/hedwig-ai/hedwig-knowledge-graph"
Repository = "https://github.com/hedwig-ai/hedwig-knowledge-graph"
Issues = "https://github.com/hedwig-ai/hedwig-knowledge-graph/issues"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov", "ruff", "mcp>=1.0"]
docs = ["pymupdf>=1.24"]
mcp = ["mcp>=1.0"]

[project.scripts]
hedwig-kg = "hedwig_kg.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["hedwig_kg"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=hedwig_kg --cov-report=term-missing"
